--- a/index.html
+++ b/index.html
@@ -1,165 +1,217 @@
 ﻿<!DOCTYPE html>
-
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Broussard Shooting Academy</title>
-<link href="styles.css" rel="stylesheet"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Broussard Shooting Academy</title>
+  <link href="styles.css" rel="stylesheet"/>
+  <style>
+    .instructor-video video {
+      max-width: 200px;
+      height: auto;
+    }
+  </style>
 </head>
 <body>
-<!-- Header with Logo -->
+<!-- Header with Logo and Responsive Nav -->
 <header class="site-header">
-<img alt="Broussard Shooting Academy Logo" class="logo" src="IMAGES/logo2.jpg"/>
-<nav>
-<a href="index.html">Home</a>
-<a href="courses/index.html">Courses</a>
-<a href="more-reviews/index.html">Reviews</a>
-<a href="contact/form.html">Contact</a>
-</nav>
+  <img alt="Broussard Shooting Academy Logo" class="logo" src="IMAGES/logo.png" />
+  <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">&#9776;</button>
+  <nav class="header-nav" id="mainNav">
+    <a href="index.html">Home</a>
+    <a href="courses/index.html">Courses</a>
+    <a href="more-reviews/index.html">Reviews</a>
+    <a href="contact/form.html">Contact</a>
+  </nav>
 </header>
+
 <!-- Hero Section -->
 <section class="hero">
-<video autoplay="" class="background-video" loop="" muted="">
-<source src="IMAGES/range-demo.mp4" type="video/mp4"/>
-</video>
-<div class="hero-content">
-<h1>Teach. Protect. Train.</h1>
-<p>Train with confidence. Certified instructor David Broussard provides hands-on, 5-star rated training trusted by hundreds of students.</p>
-<a class="cta" href="courses/index.html">View Courses</a>
-</div>
+  <video autoplay loop muted class="background-video">
+    <source src="IMAGES/range-demo.mp4" type="video/mp4"/>
+  </video>
+  <div class="hero-content">
+    <div class="hero-overlay-box">
+      <h1>Teach. Protect. Train.</h1>
+      <p>Train with confidence. Certified instructor David Broussard provides hands-on, 5-star rated training trusted by hundreds of students.</p>
+      <a class="cta" href="courses/index.html">View Courses</a>
+      <a class="cta-secondary" href="IMAGES/range-demo.mp4" target="_blank" style="margin-top: 1rem;">Watch Full Video</a>
+    </div>
+  </div>
 </section>
+
 <!-- Welcome Section -->
 <section class="welcome">
-<h2>Welcome to Broussard Shooting Academy</h2>
-<p>Located in New Orleans, we specialize in providing professional, practical, and certified firearm training for all experience levels.</p>
+  <h2>Welcome to Broussard Shooting Academy</h2>
+  <p>Located in New Orleans, we specialize in providing professional, practical, and certified firearm training for all experience levels.</p>
 </section>
+
 <!-- Why Choose Section -->
 <section class="why-choose">
-<h2>Why Students Trust Us</h2>
-<ul>
-<li>⭐ Every Student Gave 5 Stars</li>
-<li>🧐 Expert, Real-World Instruction</li>
-<li>📚 Law, Safety &amp; Situational Awareness</li>
-<li>🎯 Hands-On Range Time Included</li>
-</ul>
+  <h2>Why Students Trust Us</h2>
+  <ul>
+    <li>⭐ Every Student Gave 5 Stars</li>
+    <li>🤮 Expert, Real-World Instruction</li>
+    <li>📚 Law, Safety & Situational Awareness</li>
+    <li>🎯 Hands-On Range Time Included</li>
+  </ul>
 </section>
+
+<!-- Student Videos Section -->
+<section class="instructor-video">
+  <video src="IMAGES/student.range.mp4#t=0,6" controls muted preload="metadata"></video>
+  <video src="IMAGES/student.range2.mp4#t=0,6" controls muted preload="metadata"></video>
+  <video src="IMAGES/student.range3.mp4#t=0,6" controls muted preload="metadata"></video>
+  <video src="IMAGES/student.range4.mp4#t=0,6" controls muted preload="metadata"></video>
+</section>
+
+<!-- Certifications Section -->
+<section class="certifications">
+  <h2>Certified to Protect & Educate</h2>
+  <p>
+    In 2017, I became a proud member of the United States Concealed Carry Association (USCCA) because I believed in their core mission: empowering legally armed citizens to protect themselves and their loved ones. I’ve always felt a calling to protect and educate those around me. In 2021, I became a certified instructor to fulfill that calling and to provide professional, responsible training to my community.
+  </p>
+  <div class="certification-grid">
+    <div class="cert-card">
+      <img src="IMAGES/uscca-instructor.png" alt="Concealed Carry & Home Defense Fundamentals" />
+      <p>Concealed Carry & Home Defense Fundamentals</p>
+    </div>
+    <div class="cert-card">
+      <img src="IMAGES/uscca-womens.png" alt="Women's Handgun & Self-Defense" />
+      <p>Women's Handgun & Self-Defense</p>
+    </div>
+    <div class="cert-card">
+      <img src="IMAGES/uscca-shooter-threat.png" alt="Countering the Mass Shooter Threat" />
+      <p>Countering the Mass Shooter Threat</p>
+    </div>
+    <div class="cert-card">
+      <img src="IMAGES/uscca-first-aid.png" alt="Emergency First Aid Fundamentals" />
+      <p>Emergency First Aid Fundamentals</p>
+    </div>
+    <div class="cert-card">
+      <img src="IMAGES/uscca-kids-safety.png" alt="Children’s Firearms & Safety Fundamentals" />
+      <p>Children’s Firearms & Safety Fundamentals</p>
+    </div>
+  </div>
+</section>
+
 <!-- Courses & Pricing Section -->
 <section class="courses-pricing">
-<h2>Courses &amp; Pricing</h2>
-<p>Whether you're new to firearms or seeking advanced knowledge, we have the right course for you. All training is delivered by certified instructor David Broussard.</p>
-<table class="pricing-table">
-<thead>
-<tr>
-<th>Course</th>
-<th>Description</th>
-<th>Price</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Concealed Carry &amp; Home Defense</td>
-<td>Comprehensive concealed carry certification plus home defense fundamentals.</td>
-<td>$125</td>
-</tr>
-<tr>
-<td>Permitless / Constitutional Carry Mini Course</td>
-<td>Focused mini course on permitless and constitutional carry laws.</td>
-<td>$50</td>
-</tr>
-<tr>
-<td>Emergency First Aid Fundamentals</td>
-<td>Learn how to handle critical injuries and emergencies with confidence.</td>
-<td>$100</td>
-</tr>
-<tr>
-<td>Church Safety Team Training</td>
-<td>Essential training for church staff and safety volunteers.</td>
-<td>$50</td>
-</tr>
-<tr>
-<td>Countering the Mass Shooter Threat</td>
-<td>Analyze real-world incidents and learn effective prevention strategies.</td>
-<td>$100</td>
-</tr>
-<tr>
-<td>Real Estate Agent Safety Mini-Class</td>
-<td>Critical safety training for real estate professionals during property showings.</td>
-<td>$50</td>
-</tr>
-</tbody>
-</table>
-<p class="note">* Live Fire qualification held at <strong>Neutral Ground Gun Company</strong> is included where applicable.</p>
-<a class="cta" href="contact/form.html">Register for a Class</a>
+  <h2>Courses & Pricing</h2>
+  <p>Whether you're new to firearms or seeking advanced knowledge, we have the right course for you. All training is delivered by certified instructor David Broussard.</p>
+  <table class="pricing-table">
+    <thead>
+      <tr>
+        <th>Course</th>
+        <th>Description</th>
+        <th>Price</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Concealed Carry & Home Defense</td>
+        <td>Comprehensive concealed carry certification plus home defense fundamentals.</td>
+        <td>$125</td>
+      </tr>
+      <tr>
+        <td>Permitless / Constitutional Carry Mini Course</td>
+        <td>Focused mini course on permitless and constitutional carry laws.</td>
+        <td>$50</td>
+      </tr>
+      <tr>
+        <td>Emergency First Aid Fundamentals</td>
+        <td>Learn how to handle critical injuries and emergencies with confidence.</td>
+        <td>$100</td>
+      </tr>
+      <tr>
+        <td>Church Safety Team Training</td>
+        <td>Essential training for church staff and safety volunteers.</td>
+        <td>$50</td>
+      </tr>
+      <tr>
+        <td>Countering the Mass Shooter Threat</td>
+        <td>Analyze real-world incidents and learn effective prevention strategies.</td>
+        <td>$100</td>
+      </tr>
+      <tr>
+        <td>Real Estate Agent Safety Mini-Class</td>
+        <td>Critical safety training for real estate professionals during property showings.</td>
+        <td>$50</td>
+      </tr>
+      <tr>
+        <td>Children’s Firearms & Safety Fundamentals</td>
+        <td>This FAMILY course can be taken by parents alone or with their children. Learn safe firearm handling together and gain the confidence to educate and protect your family.</td>
+        <td>$75</td>
+      </tr>
+      <tr>
+        <td>General Pistol</td>
+        <td>Focuses on general range safety, improving shooting fundamentals, and advancing pistol technique for all skill levels.</td>
+        <td>$40</td>
+      </tr>
+    </tbody>
+  </table>
+  <p class="note">* Live Fire qualification held at <strong>Neutral Ground Gun Company</strong> is included where applicable. <a href="https://waiver.smartwaiver.com/v/NGGCWaiver/" target="_blank">Click here to access the waiver</a>.</p>
+  <a class="cta" href="courses/index.html">Register for a Class</a>
 </section>
+
 <!-- How It Works Section -->
 <section class="how-it-works">
-<h2>How It Works</h2>
-<ol>
-<li><strong>Register:</strong> Sign up online or contact us directly to book your course.</li>
-<li><strong>Train:</strong> Attend the classroom portion for legal, safety, and situational training.</li>
-<li><strong>Live Fire:</strong> Complete your range qualification at Neutral Ground Gun Company.</li>
-<li><strong>Certify:</strong> Receive your official certification upon successful completion.</li>
-</ol>
+  <h2>How It Works</h2>
+  <ol>
+    <li><strong>Register:</strong> Sign up online or contact us directly to book your course.</li>
+    <li><strong>Train:</strong> Attend the classroom portion for legal, safety, and situational training.</li>
+    <li><strong>Live Fire:</strong> Complete your range qualification at Neutral Ground Gun Company.</li>
+    <li><strong>Certify:</strong> Receive your official certification upon successful completion.</li>
+  </ol>
 </section>
-<!-- Training with Instructor Section -->
-<section class="instructor" id="about">
-<h2>Training with David Broussard</h2>
-<div class="instructor-video">
-<video autoplay="" loop="" muted="" playsinline="">
-<source src="IMAGES/student.range.mp4" type="video/mp4"/>
-    Your browser does not support the video tag.
-  </video>
-</div>
-<p>With years of law-abiding firearm education and a calm, clear teaching style, David Broussard has trained hundreds in firearm safety, legal responsibility, and real-life application. Whether you're a first-timer or looking to refresh, David ensures every student leaves with confidence.</p>
-<div class="target-photo">
-<img alt="Student Target Grouping" src="IMAGES/skills-target.jpg" style="max-width: 100%; height: auto; margin-top: 1rem;"/>
-<p style="font-style: italic; font-size: 0.9rem;">Live Fire Results – Actual student target grouping</p>
-</div>
-</section>
-<!-- Live Fire Partner Section -->
-<section class="live-fire-partner">
-<h2>Our Live Fire Partner</h2>
-<div class="partner-content">
-<a href="https://neutralgroundgunco.com/" target="_blank">
-<img alt="Neutral Ground Gun Company Logo" class="partner-logo" src="IMAGES/neutral-ground-gun-company.png"/>
-</a>
-<p>Our live-fire training is proudly hosted at <strong>Neutral Ground Gun Company</strong> — New Orleans' premier range for safe, professional firearm practice. We are grateful for their partnership in delivering top-notch, real-world experience to our students.</p>
-</div>
-</section>
+
 <!-- Reviews Section -->
 <section class="reviews" id="reviews">
-<h2>All 5-Star Student Reviews</h2>
-<ul>
-<li>"Instructor Dave Broussard did an outstanding job applying the book to real life." – Matthew S.</li>
-<li>"It was concealed carry, safety, and security all in one. David is a great teacher!" – Tammy S.</li>
-<li>"Class was very fun and informative!" – Antonis C.</li>
-<li>"David answered all questions and taught from real experience." – Emily B.</li>
-<li>"Made me feel confident and safe. Highly recommend!" – Meredith F.</li>
-</ul>
-<a class="cta-secondary" href="more-reviews/index.html">Read More Student Feedback</a>
+  <h2>All 5-Star Student Reviews</h2>
+  <ul>
+    <li>"Instructor Dave Broussard did an outstanding job applying the book to real life." – Matthew S.</li>
+    <li>"It was concealed carry, safety, and security all in one. David is a great teacher!" – Tammy S.</li>
+    <li>"Class was very fun and informative!" – Antonis C.</li>
+    <li>"David answered all questions and taught from real experience." – Emily B.</li>
+    <li>"Made me feel confident and safe. Highly recommend!" – Meredith F.</li>
+  </ul>
+  <a class="cta-secondary" href="more-reviews/index.html">Read More Student Feedback</a>
 </section>
-<!-- Call to Action Strip -->
+
+<!-- CTA Strip -->
 <section class="cta-strip">
-<h2>Train Smart. Train Safe.</h2>
-<p>Reserve your seat in our next concealed carry course with David Broussard.</p>
-<a class="cta" href="contact/form.html">Register Now</a>
-<p class="note">Discounts for Military, First Responders &amp; Law Enforcement</p>
+  <h2>Train Smart. Train Safe.</h2>
+  <p>Reserve your seat in our next concealed carry course with David Broussard.</p>
+  <a class="cta" href="courses/index.html">Register Now</a>
+  <p class="note">Discounts for Military, First Responders & Law Enforcement</p>
 </section>
+
 <!-- Footer -->
 <footer>
-<img alt="Broussard Shooting Academy Logo" src="IMAGES/logo2.jpg" style="max-width: 180px; margin-bottom: 1rem;"/><address id="contact">
-      Broussard Shooting Academy<br/>
-      📍 New Orleans, LA<br/>
-      📧 Broussardshootingacademy@protonmail.com<br/>
-      📞 504-453-3937
-    </address>
-<div class="social">
-<a href="#">Facebook</a>
-<a href="#">Instagram</a>
-<a href="#">YouTube</a>
-</div>
-<small>© 2025 Broussard Shooting Academy. All rights reserved.</small>
+  <img alt="Broussard Shooting Academy Logo" src="IMAGES/logo.png" style="max-width: 180px; margin-bottom: 1rem;" />
+  <address id="contact">
+    <strong>Broussard Shooting Academy</strong><br/>
+    📍 New Orleans, LA<br/>
+    📧 <a href="mailto:Broussardshootingacademy@protonmail.com">Broussardshootingacademy@protonmail.com</a><br/>
+    📞 <a href="tel:+15044533937">504-453-3937</a>
+  </address>
+  <small style="color: #555;">© 2025 Broussard Shooting Academy. All rights reserved.</small>
 </footer>
+
+<!-- Navigation Script -->
+<script>
+  const navToggle = document.getElementById('navToggle');
+  const mainNav = document.getElementById('mainNav');
+
+  navToggle.addEventListener('click', () => {
+    mainNav.classList.toggle('nav-open');
+  });
+
+  document.querySelectorAll('.header-nav a').forEach(link => {
+    link.addEventListener('click', () => {
+      mainNav.classList.remove('nav-open');
+    });
+  });
+</script>
 </body>
 </html>
