--- a/contact/form.html
+++ b/contact/form.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact | Broussard Shooting Academy</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link href="/styles.css" rel="stylesheet"/>
 </head>
 <body>
 
-  <!-- Header with Navigation -->
-  <header class="site-header">
-    <img class="logo" src="../IMAGES/logo.png" alt="Broussard Shooting Academy Logo" />
-    <nav>
-      <a href="../index.html">Home</a>
-      <a href="../courses/index.html">Courses</a>
-      <a href="../more-reviews/index.html">Reviews</a>
-    </nav>
-  </header>
-
+<header class="site-header">
+    <a href="/index.html">
+      <img src="../IMAGES/logo.png" alt="Broussard Shooting Academy Logo" class="logo" />
+    </a>  
+  <nav class="header-nav" id="mainNav">
+    <a href="/index.html">Home</a>
+    <a href="/courses/index.html">Courses</a>
+    <a href="/more-reviews/index.html">Reviews</a>
+    <a href="/contact/form.html">Contact</a>
+  </nav>
+  
+</header>
   <section class="info-header">
     <h1>Get More Info</h1>
     <p>Have a question about a class or need help deciding? Reach out below.</p>
