--- a/courses/index.html
+++ b/courses/index.html
@@ -1,21 +1,24 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Make a Payment | Broussard Shooting Academy</title>
-  <link rel="stylesheet" href="../styles.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Courses | Broussard Shooting Academy</title>
+  <link href="/styles.css" rel="stylesheet"/>
 </head>
 <body>
 
-  <header class="site-header">
-    <img class="logo" src="../IMAGES/logo.png" alt="Broussard Shooting Academy Logo" />
-    <nav>
-      <a href="../index.html">Home</a>
-      <a href="../more-reviews/index.html">Reviews</a>
-      <a href="../contact/form.html">Contact</a>
-    </nav>
-  </header>
+<header class="site-header">
+    <a href="/index.html">
+      <img src="../IMAGES/logo.png" alt="Broussard Shooting Academy Logo" class="logo" />
+    </a>  
+  <nav class="header-nav" id="mainNav">
+    <a href="/index.html">Home</a>
+    <a href="/courses/index.html">Courses</a>
+    <a href="/more-reviews/index.html">Reviews</a>
+    <a href="/contact/form.html">Contact</a>
+  </nav>
+</header>
 
   <section class="info-header">
     <h1>Make a Payment</h1>
