--- a/more-reviews/index.html
+++ b/more-reviews/index.html
@@ -3,19 +3,20 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Broussard Shooting Academy</title>
-  <link href="styles.css" rel="stylesheet"/>
+  <title>Reviews | Broussard Shooting Academy</title>
+  <link href="/styles.css" rel="stylesheet"/>
 </head>
 <body>
-<!-- Header with Logo -->
-<header class="site-header dark">
-  <div class="header-left">
-    <img src="../IMAGES/logo.png" alt="Broussard Shooting Academy Logo" class="logo" />
-  </div>
-  <nav class="header-nav">
-    <a href="../index.html">Home</a>
-    <a href="../courses/index.html">Courses</a>
-    <a href="../contact/form.html">Contact</a>
+
+<header class="site-header">
+    <a href="/index.html">
+      <img src="../IMAGES/logo.png" alt="Broussard Shooting Academy Logo" class="logo" />
+    </a>  
+  <nav class="header-nav" id="mainNav">
+    <a href="/index.html">Home</a>
+    <a href="/courses/index.html">Courses</a>
+    <a href="/more-reviews/index.html">Reviews</a>
+    <a href="/contact/form.html">Contact</a>
   </nav>
 </header>
 
