--- a/index.html
+++ b/index.html
@@ -5,23 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Broussard Shooting Academy</title>
   <link href="styles.css" rel="stylesheet"/>
-  <style>
-    .instructor-video video {
-      max-width: 200px;
-      height: auto;
-    }
-  </style>
 </head>
+
+
 <body>
-<!-- Header with Logo and Responsive Nav -->
+
 <header class="site-header">
-  <img alt="Broussard Shooting Academy Logo" class="logo" src="IMAGES/logo.png" />
-  <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">&#9776;</button>
+    <a href="/index.html">
+      <img src="/IMAGES/logo.png" alt="Broussard Shooting Academy Logo" class="logo" />
+    </a>  
   <nav class="header-nav" id="mainNav">
-    <a href="index.html">Home</a>
-    <a href="courses/index.html">Courses</a>
-    <a href="more-reviews/index.html">Reviews</a>
-    <a href="contact/form.html">Contact</a>
+    <a href="/index.html">Home</a>
+    <a href="/courses/index.html">Courses</a>
+    <a href="/more-reviews/index.html">Reviews</a>
+    <a href="/contact/form.html">Contact</a>
   </nav>
 </header>
 
