--- a/courses/index.html
+++ b/courses/index.html
@@ -10,7 +10,7 @@
 
 <header class="site-header">
     <a href="/index.html">
-      <img src="../IMAGES/logo.png" alt="Broussard Shooting Academy Logo" class="logo" />
+      <img src="/IMAGES/logo.png" alt="Broussard Shooting Academy Logo" class="logo" />
     </a>  
   <nav class="header-nav" id="mainNav">
     <a href="/index.html">Home</a>
@@ -23,7 +23,7 @@
   <section class="info-header">
     <h1>Make a Payment</h1>
     <p>Select your class below and pay securely via PayPal to reserve your spot.<br/>
-    <strong>If you don't have PayPal</strong>, Zelle, Cash, or check options can be arranged — please <a href="../contact/form.html">contact us here</a>.</p>
+    <strong>If you don't have PayPal</strong>, Zelle, Cash, or check options can be arranged — please <a href="/contact/form.html">contact us here</a>.</p>
   </section>
 
   <section class="class-payments">
