--- a/more-reviews/index.html
+++ b/more-reviews/index.html
@@ -10,7 +10,7 @@
 
 <header class="site-header">
     <a href="/index.html">
-      <img src="../IMAGES/logo.png" alt="Broussard Shooting Academy Logo" class="logo" />
+      <img src="/IMAGES/logo.png" alt="Broussard Shooting Academy Logo" class="logo" />
     </a>  
   <nav class="header-nav" id="mainNav">
     <a href="/index.html">Home</a>
@@ -61,7 +61,7 @@
   </div>
 
   <p class="note">Ready to join our list of satisfied students?
-    <a href="../courses/index.html" class="cta-secondary">Register for a Class</a>
+    <a href="/courses/index.html" class="cta-secondary">Register for a Class</a>
   </p>
 </section>
 </body>
