--- a/contact/form.html
+++ b/contact/form.html
@@ -10,7 +10,7 @@
 
 <header class="site-header">
     <a href="/index.html">
-      <img src="../IMAGES/logo.png" alt="Broussard Shooting Academy Logo" class="logo" />
+      <img src="/IMAGES/logo.png" alt="Broussard Shooting Academy Logo" class="logo" />
     </a>  
   <nav class="header-nav" id="mainNav">
     <a href="/index.html">Home</a>
