--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Broussard Shooting Academy</title>
-  <link href="styles.css" rel="stylesheet"/>
+  <link href="/styles.css" rel="stylesheet"/>
 </head>
 
 
@@ -25,14 +25,14 @@
 <!-- Hero Section -->
 <section class="hero">
   <video autoplay loop muted class="background-video">
-    <source src="IMAGES/range-demo.mp4" type="video/mp4"/>
+    <source src="/IMAGES/range-demo.mp4" type="video/mp4"/>
   </video>
   <div class="hero-content">
     <div class="hero-overlay-box">
       <h1>Teach. Protect. Train.</h1>
       <p>Train with confidence. Certified instructor David Broussard provides hands-on, 5-star rated training trusted by hundreds of students.</p>
-      <a class="cta" href="courses/index.html">View Courses</a>
-      <a class="cta-secondary" href="IMAGES/range-demo.mp4" target="_blank" style="margin-top: 1rem;">Watch Full Video</a>
+      <a class="cta" href="/courses/index.html">View Courses</a>
+      <a class="cta-secondary" href="/IMAGES/range-demo.mp4" target="_blank" style="margin-top: 1rem;">Watch Full Video</a>
     </div>
   </div>
 </section>
@@ -56,10 +56,10 @@
 
 <!-- Student Videos Section -->
 <section class="instructor-video">
-  <video src="IMAGES/student.range.mp4#t=0,6" controls muted preload="metadata"></video>
-  <video src="IMAGES/student.range2.mp4#t=0,6" controls muted preload="metadata"></video>
-  <video src="IMAGES/student.range3.mp4#t=0,6" controls muted preload="metadata"></video>
-  <video src="IMAGES/student.range4.mp4#t=0,6" controls muted preload="metadata"></video>
+  <video src="/IMAGES/student.range.mp4#t=0,6" controls muted preload="metadata"></video>
+  <video src="/IMAGES/student.range2.mp4#t=0,6" controls muted preload="metadata"></video>
+  <video src="/IMAGES/student.range3.mp4#t=0,6" controls muted preload="metadata"></video>
+  <video src="/IMAGES/student.range4.mp4#t=0,6" controls muted preload="metadata"></video>
 </section>
 
 <!-- Certifications Section -->
@@ -70,23 +70,23 @@
   </p>
   <div class="certification-grid">
     <div class="cert-card">
-      <img src="IMAGES/uscca-instructor.png" alt="Concealed Carry & Home Defense Fundamentals" />
+      <img src="/IMAGES/uscca-instructor.png" alt="Concealed Carry & Home Defense Fundamentals" />
       <p>Concealed Carry & Home Defense Fundamentals</p>
     </div>
     <div class="cert-card">
-      <img src="IMAGES/uscca-womens.png" alt="Women's Handgun & Self-Defense" />
+      <img src="/IMAGES/uscca-womens.png" alt="Women's Handgun & Self-Defense" />
       <p>Women's Handgun & Self-Defense</p>
     </div>
     <div class="cert-card">
-      <img src="IMAGES/uscca-shooter-threat.png" alt="Countering the Mass Shooter Threat" />
+      <img src="/IMAGES/uscca-shooter-threat.png" alt="Countering the Mass Shooter Threat" />
       <p>Countering the Mass Shooter Threat</p>
     </div>
     <div class="cert-card">
-      <img src="IMAGES/uscca-first-aid.png" alt="Emergency First Aid Fundamentals" />
+      <img src="/IMAGES/uscca-first-aid.png" alt="Emergency First Aid Fundamentals" />
       <p>Emergency First Aid Fundamentals</p>
     </div>
     <div class="cert-card">
-      <img src="IMAGES/uscca-kids-safety.png" alt="Children’s Firearms & Safety Fundamentals" />
+      <img src="/IMAGES/uscca-kids-safety.png" alt="Children’s Firearms & Safety Fundamentals" />
       <p>Children’s Firearms & Safety Fundamentals</p>
     </div>
   </div>
@@ -148,7 +148,7 @@
     </tbody>
   </table>
   <p class="note">* Live Fire qualification held at <strong>Neutral Ground Gun Company</strong> is included where applicable. <a href="https://waiver.smartwaiver.com/v/NGGCWaiver/" target="_blank">Click here to access the waiver</a>.</p>
-  <a class="cta" href="courses/index.html">Register for a Class</a>
+  <a class="cta" href="/courses/index.html">Register for a Class</a>
 </section>
 
 <!-- How It Works Section -->
@@ -172,20 +172,20 @@
     <li>"David answered all questions and taught from real experience." – Emily B.</li>
     <li>"Made me feel confident and safe. Highly recommend!" – Meredith F.</li>
   </ul>
-  <a class="cta-secondary" href="more-reviews/index.html">Read More Student Feedback</a>
+  <a class="cta-secondary" href="/more-reviews/index.html">Read More Student Feedback</a>
 </section>
 
 <!-- CTA Strip -->
 <section class="cta-strip">
   <h2>Train Smart. Train Safe.</h2>
   <p>Reserve your seat in our next concealed carry course with David Broussard.</p>
-  <a class="cta" href="courses/index.html">Register Now</a>
+  <a class="cta" href="/courses/index.html">Register Now</a>
   <p class="note">Discounts for Military, First Responders & Law Enforcement</p>
 </section>
 
 <!-- Footer -->
 <footer>
-  <img alt="Broussard Shooting Academy Logo" src="IMAGES/logo.png" style="max-width: 180px; margin-bottom: 1rem;" />
+  <img alt="Broussard Shooting Academy Logo" src="/IMAGES/logo.png" style="max-width: 180px; margin-bottom: 1rem;" />
   <address id="contact">
     <strong>Broussard Shooting Academy</strong><br/>
     📍 New Orleans, LA<br/>
