--- a/contact/form.html
+++ b/contact/form.html
@@ -33,7 +33,7 @@
 
   <section class="info-form">
     <h2>Ask a Question</h2>
-    <form action="sendmail.php" method="POST">
+    <form action="https://formsubmit.co/Broussardshootingacademy@protonmail.com" method="POST">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required />
 
