--- a/more-reviews/index.html
+++ b/more-reviews/index.html
@@ -4,19 +4,19 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Reviews | Broussard Shooting Academy</title>
-  <link href="/styles.css" rel="stylesheet"/>
+  <link href="/broussardinstruction/styles.css" rel="stylesheet"/>
 </head>
 <body>
 
 <header class="site-header">
-    <a href="/index.html">
-      <img src="/IMAGES/logo.png" alt="Broussard Shooting Academy Logo" class="logo" />
+    <a href="/broussardinstruction/index.html">
+      <img src="/broussardinstruction/IMAGES/logo.png" alt="Broussard Shooting Academy Logo" class="logo" />
     </a>  
   <nav class="header-nav" id="mainNav">
-    <a href="/index.html">Home</a>
-    <a href="/courses/index.html">Courses</a>
-    <a href="/more-reviews/index.html">Reviews</a>
-    <a href="/contact/form.html">Contact</a>
+    <a href="/broussardinstruction/index.html">Home</a>
+    <a href="/broussardinstruction/courses/index.html">Courses</a>
+    <a href="/broussardinstruction/more-reviews/index.html">Reviews</a>
+    <a href="/broussardinstruction/contact/form.html">Contact</a>
   </nav>
 </header>
 
@@ -61,7 +61,7 @@
   </div>
 
   <p class="note">Ready to join our list of satisfied students?
-    <a href="/courses/index.html" class="cta-secondary">Register for a Class</a>
+    <a href="/broussardinstruction/courses/index.html" class="cta-secondary">Register for a Class</a>
   </p>
 </section>
 </body>
