--- a/contact/form.html
+++ b/contact/form.html
@@ -4,66 +4,66 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact | Broussard Shooting Academy</title>
-  <link href="/styles.css" rel="stylesheet"/>
+  <link href="/broussardinstruction/styles.css" rel="stylesheet"/>
 </head>
 <body>
 
 <header class="site-header">
-    <a href="/index.html">
-      <img src="/IMAGES/logo.png" alt="Broussard Shooting Academy Logo" class="logo" />
+    <a href="/broussardinstruction/index.html">
+      <img src="/broussardinstruction/IMAGES/logo.png" alt="Broussard Shooting Academy Logo" class="logo" />
     </a>  
   <nav class="header-nav" id="mainNav">
-    <a href="/index.html">Home</a>
-    <a href="/courses/index.html">Courses</a>
-    <a href="/more-reviews/index.html">Reviews</a>
-    <a href="/contact/form.html">Contact</a>
+    <a href="/broussardinstruction/index.html">Home</a>
+    <a href="/broussardinstruction/courses/index.html">Courses</a>
+    <a href="/broussardinstruction/more-reviews/index.html">Reviews</a>
+    <a href="/broussardinstruction/contact/form.html">Contact</a>
   </nav>
-  
 </header>
-  <section class="info-header">
-    <h1>Get More Info</h1>
-    <p>Have a question about a class or need help deciding? Reach out below.</p>
-  </section>
 
-  <section class="contact-details">
-    <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:broussardshootingacademy@protonmail.com">broussardshootingacademy@protonmail.com</a></p>
-    <p>Phone: <a href="tel:5044533937">504-453-3937</a> (Text Preferred)</p>
-  </section>
+<section class="info-header">
+  <h1>Get More Info</h1>
+  <p>Have a question about a class or need help deciding? Reach out below.</p>
+</section>
 
-  <section class="info-form">
-    <h2>Ask a Question</h2>
-    <form action="https://formsubmit.co/Broussardshootingacademy@protonmail.com" method="POST">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required />
+<section class="contact-details">
+  <h2>Contact Us</h2>
+  <p>Email: <a href="mailto:broussardshootingacademy@protonmail.com">broussardshootingacademy@protonmail.com</a></p>
+  <p>Phone: <a href="tel:5044533937">504-453-3937</a> (Text Preferred)</p>
+</section>
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required />
+<section class="info-form">
+  <h2>Ask a Question</h2>
+  <form action="https://formsubmit.co/Broussardshootingacademy@protonmail.com" method="POST">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required />
 
-      <label for="class">Class You're Interested In:</label>
-      <select id="class" name="class">
-        <option value="concealed">Concealed Carry</option>
-        <option value="firstaid">First Aid</option>
-        <option value="constitutional">LA Constitutional Carry</option>
-        <option value="womens">Woman's Handgun</option>
-        <option value="massshooter">Countering: Mass Shooter Threat</option>
-        <option value="realestate">Real Estate Agent Safety</option>
-      </select>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required />
 
-      <label for="message">Your Question:</label>
-      <textarea id="message" name="message" rows="5" required></textarea>
+    <label for="class">Class You're Interested In:</label>
+    <select id="class" name="class">
+      <option value="concealed">Concealed Carry</option>
+      <option value="firstaid">First Aid</option>
+      <option value="constitutional">LA Constitutional Carry</option>
+      <option value="womens">Woman's Handgun</option>
+      <option value="massshooter">Countering: Mass Shooter Threat</option>
+      <option value="realestate">Real Estate Agent Safety</option>
+    </select>
 
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
+    <label for="message">Your Question:</label>
+    <textarea id="message" name="message" rows="5" required></textarea>
 
-  <section class="faq">
-    <h2>Frequently Asked Questions</h2>
-    <ul>
-      <li><strong>Do I need to bring my own gun?</strong> — No, firearms can be provided for class use.</li>
-      <li><strong>What if I’ve never shot before?</strong> — That’s perfectly okay! We train all levels.</li>
-    </ul>
-  </section>
+    <button type="submit">Send Message</button>
+  </form>
+</section>
+
+<section class="faq">
+  <h2>Frequently Asked Questions</h2>
+  <ul>
+    <li><strong>Do I need to bring my own gun?</strong> — No, firearms can be provided for class use.</li>
+    <li><strong>What if I’ve never shot before?</strong> — That’s perfectly okay! We train all levels.</li>
+  </ul>
+</section>
 
 </body>
 </html>
