--- a/courses/index.html
+++ b/courses/index.html
@@ -4,88 +4,87 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Courses | Broussard Shooting Academy</title>
-  <link href="/styles.css" rel="stylesheet"/>
+  <link href="/broussardinstruction/styles.css" rel="stylesheet"/>
 </head>
 <body>
 
 <header class="site-header">
-    <a href="/index.html">
-      <img src="/IMAGES/logo.png" alt="Broussard Shooting Academy Logo" class="logo" />
+    <a href="/broussardinstruction/index.html">
+      <img src="/broussardinstruction/IMAGES/logo.png" alt="Broussard Shooting Academy Logo" class="logo" />
     </a>  
   <nav class="header-nav" id="mainNav">
-    <a href="/index.html">Home</a>
-    <a href="/courses/index.html">Courses</a>
-    <a href="/more-reviews/index.html">Reviews</a>
-    <a href="/contact/form.html">Contact</a>
+    <a href="/broussardinstruction/index.html">Home</a>
+    <a href="/broussardinstruction/courses/index.html">Courses</a>
+    <a href="/broussardinstruction/more-reviews/index.html">Reviews</a>
+    <a href="/broussardinstruction/contact/form.html">Contact</a>
   </nav>
 </header>
 
-  <section class="info-header">
-    <h1>Make a Payment</h1>
-    <p>Select your class below and pay securely via PayPal to reserve your spot.<br/>
-    <strong>If you don't have PayPal</strong>, Zelle, Cash, or check options can be arranged — please <a href="/contact/form.html">contact us here</a>.</p>
-  </section>
+<section class="info-header">
+  <h1>Make a Payment</h1>
+  <p>Select your class below and pay securely via PayPal to reserve your spot.<br/>
+  <strong>If you don't have PayPal</strong>, Zelle, Cash, or check options can be arranged — please <a href="/broussardinstruction/contact/form.html">contact us here</a>.</p>
+</section>
 
-  <section class="class-payments">
-    <div class="class-item">
-      <h2>Concealed Carry & Home Defense</h2>
-      <p>$125 – Comprehensive concealed carry certification plus home defense fundamentals.</p>
-      <p><strong>Available Dates:</strong><br>
-      <b>August:</b> 3, 10, 17, 24, 31<br>
-      <b>September:</b> 7, 14, 21, 28
-      </p>
-      <a href="https://www.paypal.me/dbroussa431/125" class="paypal-button">Pay $125</a>
-    </div>
+<section class="class-payments">
+  <div class="class-item">
+    <h2>Concealed Carry & Home Defense</h2>
+    <p>$125 – Comprehensive concealed carry certification plus home defense fundamentals.</p>
+    <p><strong>Available Dates:</strong><br>
+    <b>August:</b> 3, 10, 17, 24, 31<br>
+    <b>September:</b> 7, 14, 21, 28</p>
+    <a href="https://www.paypal.me/dbroussa431/125" class="paypal-button">Pay $125</a>
+  </div>
 
-    <div class="class-item">
-      <h2>Permitless / Constitutional Carry Mini Course</h2>
-      <p>$50 – Focused mini course on permitless and constitutional carry laws.</p>
-      <p><strong>Class Dates:</strong> TBA / Upon Request</p>
-      <a href="https://www.paypal.me/dbroussa431/50" class="paypal-button">Pay $50</a>
-    </div>
+  <div class="class-item">
+    <h2>Permitless / Constitutional Carry Mini Course</h2>
+    <p>$50 – Focused mini course on permitless and constitutional carry laws.</p>
+    <p><strong>Class Dates:</strong> TBA / Upon Request</p>
+    <a href="https://www.paypal.me/dbroussa431/50" class="paypal-button">Pay $50</a>
+  </div>
 
-    <div class="class-item">
-      <h2>Emergency First Aid Fundamentals</h2>
-      <p>$100 – Learn how to handle critical injuries and emergencies with confidence.</p>
-      <p><strong>Class Dates:</strong> TBA / Upon Request</p>
-      <a href="https://www.paypal.me/dbroussa431/100" class="paypal-button">Pay $100</a>
-    </div>
+  <div class="class-item">
+    <h2>Emergency First Aid Fundamentals</h2>
+    <p>$100 – Learn how to handle critical injuries and emergencies with confidence.</p>
+    <p><strong>Class Dates:</strong> TBA / Upon Request</p>
+    <a href="https://www.paypal.me/dbroussa431/100" class="paypal-button">Pay $100</a>
+  </div>
 
-    <div class="class-item">
-      <h2>Church Safety Team Training</h2>
-      <p>$50 – Essential training for church staff and safety volunteers.</p>
-      <p><strong>Class Dates:</strong> TBA / Upon Request</p>
-      <a href="https://www.paypal.me/dbroussa431/50" class="paypal-button">Pay $50</a>
-    </div>
+  <div class="class-item">
+    <h2>Church Safety Team Training</h2>
+    <p>$50 – Essential training for church staff and safety volunteers.</p>
+    <p><strong>Class Dates:</strong> TBA / Upon Request</p>
+    <a href="https://www.paypal.me/dbroussa431/50" class="paypal-button">Pay $50</a>
+  </div>
 
-    <div class="class-item">
-      <h2>Countering the Mass Shooter Threat</h2>
-      <p>$100 – Analyze real-world incidents and learn effective prevention strategies.</p>
-      <p><strong>Class Dates:</strong> TBA / Upon Request</p>
-      <a href="https://www.paypal.me/dbroussa431/100" class="paypal-button">Pay $100</a>
-    </div>
+  <div class="class-item">
+    <h2>Countering the Mass Shooter Threat</h2>
+    <p>$100 – Analyze real-world incidents and learn effective prevention strategies.</p>
+    <p><strong>Class Dates:</strong> TBA / Upon Request</p>
+    <a href="https://www.paypal.me/dbroussa431/100" class="paypal-button">Pay $100</a>
+  </div>
 
-    <div class="class-item">
-      <h2>Real Estate Agent Safety Mini-Class</h2>
-      <p>$50 – Critical safety training for real estate professionals during property showings.</p>
-      <p><strong>Class Dates:</strong> TBA / Upon Request</p>
-      <a href="https://www.paypal.me/dbroussa431/50" class="paypal-button">Pay $50</a>
-    </div>
+  <div class="class-item">
+    <h2>Real Estate Agent Safety Mini-Class</h2>
+    <p>$50 – Critical safety training for real estate professionals during property showings.</p>
+    <p><strong>Class Dates:</strong> TBA / Upon Request</p>
+    <a href="https://www.paypal.me/dbroussa431/50" class="paypal-button">Pay $50</a>
+  </div>
 
-    <div class="class-item">
-      <h2>Children’s Firearms & Safety Fundamentals</h2>
-      <p>$75 – A FAMILY course designed for parents to attend alone or with their children. Learn to educate and protect your household with practical firearm safety training.</p>
-      <p><strong>Class Dates:</strong> TBA / Upon Request</p>
-      <a href="https://www.paypal.me/dbroussa431/75" class="paypal-button">Pay $75</a>
-    </div>
+  <div class="class-item">
+    <h2>Children’s Firearms & Safety Fundamentals</h2>
+    <p>$75 – A FAMILY course designed for parents to attend alone or with their children. Learn to educate and protect your household with practical firearm safety training.</p>
+    <p><strong>Class Dates:</strong> TBA / Upon Request</p>
+    <a href="https://www.paypal.me/dbroussa431/75" class="paypal-button">Pay $75</a>
+  </div>
 
-    <div class="class-item">
-      <h2>General Pistol</h2>
-      <p>$40 – Focuses on general range safety, improving shooting fundamentals, and advancing pistol technique.</p>
-      <p><strong>Class Dates:</strong> TBA / Upon Request</p>
-      <a href="https://www.paypal.me/dbroussa431/40" class="paypal-button">Pay $40</a>
-    </div>
-  </section>
+  <div class="class-item">
+    <h2>General Pistol</h2>
+    <p>$40 – Focuses on general range safety, improving shooting fundamentals, and advancing pistol technique.</p>
+    <p><strong>Class Dates:</strong> TBA / Upon Request</p>
+    <a href="https://www.paypal.me/dbroussa431/40" class="paypal-button">Pay $40</a>
+  </div>
+</section>
 
 </body>
 </html>
