--- a/courses/index.html
+++ b/courses/index.html
@@ -85,6 +85,16 @@
     <a href="https://www.paypal.me/dbroussa431/40" class="paypal-button">Pay $40</a>
   </div>
 </section>
-
+<!-- Footer -->
+<footer>
+  <img alt="Broussard Shooting Academy Logo" src="/IMAGES/logo.png" style="max-width: 180px; margin-bottom: 1rem;" />
+  <address id="contact">
+    <strong>Broussard Shooting Academy</strong><br/>
+    📍 New Orleans, LA<br/>
+    📧 <a href="mailto:Broussardshootingacademy@protonmail.com">Broussardshootingacademy@protonmail.com</a><br/>
+    📞 <a href="tel:+15044533937">504-453-3937</a>
+  </address>
+  <small style="color: #555;">© 2025 Broussard Shooting Academy. All rights reserved.</small>
+</footer>
 </body>
 </html>
