--- a/contact/form.html
+++ b/contact/form.html
@@ -31,7 +31,7 @@
   <p>Phone: <a href="tel:5044533937">504-453-3937</a> (Text Preferred)</p>
 </section>
 
-<section class="info-form">
+<!-- <section class="info-form">
   <h2>Ask a Question</h2>
   <form action="#" method="POST">
     <label for="name">Name:</label>
@@ -55,7 +55,7 @@
 
     <button type="submit">Send Message</button>
   </form>
-</section>
+</section> -->
 
 <section class="faq">
   <h2>Frequently Asked Questions</h2>
