--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <a href="/broussardinstruction/contact/form.html">Contact</a>
   </nav>
 </header>
+<div style="height: 80px;"></div> Adjust height to match header height
+
 
 <!-- Hero Section -->
 <section class="hero">
