--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="/broussardinstruction/contact/form.html">Contact</a>
   </nav>
 </header>
-<div style="height: 80px;"></div> Adjust height to match header height
+<div style="height: 5px;"></div>
 
 
 <!-- Hero Section -->
