--- a/index.html
+++ b/index.html
@@ -4,189 +4,147 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Broussard Shooting Academy</title>
-  <link href="/broussardinstruction/styles.css" rel="stylesheet"/>
+  <meta name="description" content="Professional firearm and self-defense training by David Broussard in New Orleans.">
+  <link href="styles.css" rel="stylesheet" />
 </head>
-
 <body>
 
+<!-- Header with Logo and Navigation -->
 <header class="site-header">
-    <a href="/broussardinstruction/index.html">
-      <img src="/broussardinstruction/IMAGES/logo.png" alt="Broussard Shooting Academy Logo" class="logo" />
-    </a>  
-  <nav class="header-nav" id="mainNav">
-    <a href="/broussardinstruction/index.html">Home</a>
-    <a href="/broussardinstruction/courses/index.html">Courses</a>
-    <a href="/broussardinstruction/more-reviews/index.html">Reviews</a>
-    <a href="/broussardinstruction/contact/form.html">Contact</a>
+  <img alt="Broussard Shooting Academy Logo" class="logo" src="IMAGES/logo.png" />
+  <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">&#9776;</button>
+  <nav class="header-nav" id="mainNav" aria-label="Primary navigation">
+    <a href="index.html">Home</a>
+    <a href="courses/index.html">Courses</a>
+    <a href="more-reviews/index.html">Reviews</a>
+    <a href="contact/index.html">Contact</a>
   </nav>
 </header>
-<div style="height: 5px;"></div>
 
-
-<!-- Hero Section -->
+<!-- Hero -->
 <section class="hero">
   <video autoplay loop muted class="background-video">
-    <source src="/broussardinstruction/IMAGES/range-demo.mp4" type="video/mp4"/>
+    <source src="IMAGES/range-demo.mp4" type="video/mp4"/>
   </video>
   <div class="hero-content">
     <div class="hero-overlay-box">
       <h1>Teach. Protect. Train.</h1>
-      <p>Train with confidence. Certified instructor David Broussard provides hands-on, 5-star rated training trusted by hundreds of students.</p>
-      <a class="cta" href="/broussardinstruction/courses/index.html">View Courses</a>
-      <a class="cta-secondary" href="/broussardinstruction/IMAGES/range-demo.mp4" target="_blank" style="margin-top: 1rem;">Watch Full Video</a>
+      <p>Certified instructor David Broussard delivers 5-star hands-on firearm training.</p>
+      <a class="cta" href="courses/index.html">View Courses</a>
+      <a class="cta-secondary" href="IMAGES/range-demo.mp4" target="_blank">Watch Full Video</a>
     </div>
   </div>
 </section>
 
-<!-- Welcome Section -->
+<!-- Welcome -->
 <section class="welcome">
   <h2>Welcome to Broussard Shooting Academy</h2>
-  <p>Located in New Orleans, we specialize in providing professional, practical, and certified firearm training for all experience levels.</p>
+  <p>Professional, practical, certified firearm training for all experience levels.</p>
 </section>
 
-<!-- Why Choose Section -->
+<!-- Why Choose -->
 <section class="why-choose">
   <h2>Why Students Trust Us</h2>
   <ul>
     <li>⭐ Every Student Gave 5 Stars</li>
-    <li>🤮 Expert, Real-World Instruction</li>
-    <li>📚 Law, Safety & Situational Awareness</li>
-    <li>🎯 Hands-On Range Time Included</li>
+    <li>💬 Real-World Instruction</li>
+    <li>📚 Legal, Safety & Awareness</li>
+    <li>🎯 Hands-On Range Time</li>
   </ul>
 </section>
 
-<!-- Student Videos Section -->
+<!-- Student Videos -->
 <section class="instructor-video">
-  <video src="/broussardinstruction/IMAGES/student.range.mp4#t=0,6" controls muted preload="metadata"></video>
-  <video src="/broussardinstruction/IMAGES/student.range2.mp4#t=0,6" controls muted preload="metadata"></video>
-  <video src="/broussardinstruction/IMAGES/student.range3.mp4#t=0,6" controls muted preload="metadata"></video>
-  <video src="/broussardinstruction/IMAGES/student.range4.mp4#t=0,6" controls muted preload="metadata"></video>
+  <video src="IMAGES/student.range.mp4#t=0,6" controls muted preload="metadata"></video>
+  <video src="IMAGES/student.range2.mp4#t=0,6" controls muted preload="metadata"></video>
+  <video src="IMAGES/student.range3.mp4#t=0,6" controls muted preload="metadata"></video>
+  <video src="IMAGES/student.range4.mp4#t=0,6" controls muted preload="metadata"></video>
 </section>
 
-<!-- Certifications Section -->
+<!-- Certifications -->
 <section class="certifications">
   <h2>Certified to Protect & Educate</h2>
   <p>
-    In 2017, I became a proud member of the United States Concealed Carry Association (USCCA) because I believed in their core mission: empowering legally armed citizens to protect themselves and their loved ones. I’ve always felt a calling to protect and educate those around me. In 2021, I became a certified instructor to fulfill that calling and to provide professional, responsible training to my community.
+    In 2017, I joined the USCCA to empower legally armed citizens. In 2021, I became a certified instructor to educate and protect my community.
   </p>
   <div class="certification-grid">
-    <div class="cert-card">
-      <img src="/broussardinstruction/IMAGES/uscca-instructor.png" alt="Concealed Carry & Home Defense Fundamentals" />
-      <p>Concealed Carry & Home Defense Fundamentals</p>
-    </div>
-    <div class="cert-card">
-      <img src="/broussardinstruction/IMAGES/uscca-womens.png" alt="Women's Handgun & Self-Defense" />
-      <p>Women's Handgun & Self-Defense</p>
-    </div>
-    <div class="cert-card">
-      <img src="/broussardinstruction/IMAGES/uscca-shooter-threat.png" alt="Countering the Mass Shooter Threat" />
-      <p>Countering the Mass Shooter Threat</p>
-    </div>
-    <div class="cert-card">
-      <img src="/broussardinstruction/IMAGES/uscca-first-aid.png" alt="Emergency First Aid Fundamentals" />
-      <p>Emergency First Aid Fundamentals</p>
-    </div>
-    <div class="cert-card">
-      <img src="/broussardinstruction/IMAGES/uscca-kids-safety.png" alt="Children’s Firearms & Safety Fundamentals" />
-      <p>Children’s Firearms & Safety Fundamentals</p>
-    </div>
+    <div class="cert-card"><img src="IMAGES/uscca-instructor.png" alt="Concealed Carry & Home Defense"><p>Concealed Carry</p></div>
+    <div class="cert-card"><img src="IMAGES/uscca-womens.png" alt="Women's Handgun"><p>Women’s Handgun</p></div>
+    <div class="cert-card"><img src="IMAGES/uscca-shooter-threat.png" alt="Shooter Threat"><p>Shooter Threat</p></div>
+    <div class="cert-card"><img src="IMAGES/uscca-first-aid.png" alt="First Aid"><p>First Aid</p></div>
+    <div class="cert-card"><img src="IMAGES/uscca-kids-safety.png" alt="Kids Safety"><p>Kids Safety</p></div>
   </div>
 </section>
 
-<!-- Courses & Pricing Section -->
+<!-- Courses -->
 <section class="courses-pricing">
   <h2>Courses & Pricing</h2>
-  <p>Whether you're new to firearms or seeking advanced knowledge, we have the right course for you. All training is delivered by certified instructor David Broussard.</p>
+  <p>Find the course that fits your skill level. All taught by certified instructor David Broussard.</p>
   <table class="pricing-table">
     <thead>
-      <tr>
-        <th>Course</th>
-        <th>Description</th>
-        <th>Price</th>
-      </tr>
+      <tr><th>Course</th><th>Description</th><th>Price</th></tr>
     </thead>
     <tbody>
-      <tr>
-        <td>Concealed Carry & Home Defense</td>
-        <td>Comprehensive concealed carry certification plus home defense fundamentals.</td>
-        <td>$125</td>
-      </tr>
-      <tr>
-        <td>Permitless / Constitutional Carry Mini Course</td>
-        <td>Focused mini course on permitless and constitutional carry laws.</td>
-        <td>$50</td>
-      </tr>
-      <tr>
-        <td>Emergency First Aid Fundamentals</td>
-        <td>Learn how to handle critical injuries and emergencies with confidence.</td>
-        <td>$100</td>
-      </tr>
-      <tr>
-        <td>Church Safety Team Training</td>
-        <td>Essential training for church staff and safety volunteers.</td>
-        <td>$50</td>
-      </tr>
-      <tr>
-        <td>Countering the Mass Shooter Threat</td>
-        <td>Analyze real-world incidents and learn effective prevention strategies.</td>
-        <td>$100</td>
-      </tr>
-      <tr>
-        <td>Real Estate Agent Safety Mini-Class</td>
-        <td>Critical safety training for real estate professionals during property showings.</td>
-        <td>$50</td>
-      </tr>
-      <tr>
-        <td>Children’s Firearms & Safety Fundamentals</td>
-        <td>This FAMILY course can be taken by parents alone or with their children. Learn safe firearm handling together and gain the confidence to educate and protect your family.</td>
-        <td>$75</td>
-      </tr>
-      <tr>
-        <td>General Pistol</td>
-        <td>Focuses on general range safety, improving shooting fundamentals, and advancing pistol technique for all skill levels.</td>
-        <td>$40</td>
-      </tr>
+      <tr><td>Concealed Carry</td><td>Full certification and home defense.</td><td>$125</td></tr>
+      <tr><td>Permitless Carry</td><td>Mini course on Louisiana law.</td><td>$50</td></tr>
+      <tr><td>First Aid</td><td>Handle critical injuries with confidence.</td><td>$100</td></tr>
+      <tr><td>Church Safety</td><td>For staff & volunteers.</td><td>$50</td></tr>
+      <tr><td>Shooter Threat</td><td>Prevention strategies and tactics.</td><td>$100</td></tr>
+      <tr><td>Agent Safety</td><td>For real estate professionals.</td><td>$50</td></tr>
+      <tr><td>Children’s Firearms</td><td>Family safety education together.</td><td>$75</td></tr>
+      <tr><td>General Pistol</td><td>Range safety & shooting fundamentals.</td><td>$40</td></tr>
     </tbody>
   </table>
-  <p class="note">* Live Fire qualification held at <strong>Neutral Ground Gun Company</strong> is included where applicable. <a href="https://waiver.smartwaiver.com/v/NGGCWaiver/" target="_blank">Click here to access the waiver</a>.</p>
-  <a class="cta" href="/broussardinstruction/courses/index.html">Register for a Class</a>
+  <p class="note">* Live Fire held at <strong>Neutral Ground Gun Company</strong>. <a href="https://waiver.smartwaiver.com/v/NGGCWaiver/" target="_blank">Sign Waiver</a>.</p>
+  <a class="cta" href="courses/index.html">Register for a Class</a>
 </section>
 
-<!-- How It Works Section -->
+<!-- Partner -->
+<section class="live-fire-partner">
+  <h2>Our Live Fire Partner</h2>
+  <div class="partner-content">
+    <a href="https://neutralgroundgunco.com/" target="_blank">
+      <img alt="Neutral Ground Gun Company" class="partner-logo" src="IMAGES/neutral-ground-gun-company.png"/>
+    </a>
+    <p>We proudly partner with <strong>Neutral Ground Gun Company</strong> for live-fire training in a professional, safe setting.</p>
+  </div>
+</section>
+
+<!-- How It Works -->
 <section class="how-it-works">
   <h2>How It Works</h2>
   <ol>
-    <li><strong>Register:</strong> Sign up online or contact us directly to book your course.</li>
-    <li><strong>Train:</strong> Attend the classroom portion for legal, safety, and situational training.</li>
-    <li><strong>Live Fire:</strong> Complete your range qualification at Neutral Ground Gun Company.</li>
-    <li><strong>Certify:</strong> Receive your official certification upon successful completion.</li>
+    <li><strong>Register:</strong> Sign up online or call us.</li>
+    <li><strong>Train:</strong> Attend legal/safety classroom training.</li>
+    <li><strong>Live Fire:</strong> Qualify at our partner range.</li>
+    <li><strong>Certify:</strong> Receive your certification.</li>
   </ol>
 </section>
 
-<!-- Reviews Section -->
+<!-- Reviews -->
 <section class="reviews" id="reviews">
   <h2>All 5-Star Student Reviews</h2>
   <ul>
-    <li>"Instructor Dave Broussard did an outstanding job applying the book to real life." – Matthew S.</li>
-    <li>"It was concealed carry, safety, and security all in one. David is a great teacher!" – Tammy S.</li>
-    <li>"Class was very fun and informative!" – Antonis C.</li>
-    <li>"David answered all questions and taught from real experience." – Emily B.</li>
-    <li>"Made me feel confident and safe. Highly recommend!" – Meredith F.</li>
+    <li>"Real-life teaching, not just a book." – Matthew S.</li>
+    <li>"David is a great teacher!" – Tammy S.</li>
+    <li>"Fun and informative!" – Antonis C.</li>
+    <li>"Real experience. Solid answers." – Emily B.</li>
+    <li>"Safe, confident. Highly recommend!" – Meredith F.</li>
   </ul>
-  <a class="cta-secondary" href="/broussardinstruction/more-reviews/index.html">Read More Student Feedback</a>
+  <a class="cta-secondary" href="more-reviews/index.html">More Student Feedback</a>
 </section>
 
-<!-- CTA Strip -->
+<!-- Call to Action -->
 <section class="cta-strip">
   <h2>Train Smart. Train Safe.</h2>
-  <p>Reserve your seat in our next concealed carry course with David Broussard.</p>
-  <a class="cta" href="/broussardinstruction/courses/index.html">Register Now</a>
+  <p>Reserve your seat today with David Broussard.</p>
+  <a class="cta" href="courses/index.html">Register Now</a>
   <p class="note">Discounts for Military, First Responders & Law Enforcement</p>
 </section>
 
 <!-- Footer -->
 <footer>
-  <img alt="Broussard Shooting Academy Logo" src="/broussardinstruction/IMAGES/logo.png" style="max-width: 180px; margin-bottom: 1rem;" />
+  <img alt="Broussard Shooting Academy Logo" src="IMAGES/logo.png" style="max-width: 180px; margin-bottom: 1rem;" />
   <address id="contact">
     <strong>Broussard Shooting Academy</strong><br/>
     📍 New Orleans, LA<br/>
@@ -201,13 +159,13 @@
   const navToggle = document.getElementById('navToggle');
   const mainNav = document.getElementById('mainNav');
 
-  navToggle?.addEventListener('click', () => {
-    mainNav?.classList.toggle('nav-open');
+  navToggle.addEventListener('click', () => {
+    mainNav.classList.toggle('nav-open');
   });
 
   document.querySelectorAll('.header-nav a').forEach(link => {
     link.addEventListener('click', () => {
-      mainNav?.classList.remove('nav-open');
+      mainNav.classList.remove('nav-open');
     });
   });
 </script>
